[package]
name = "cyber"
version = "0.1.0"
edition = "2024"
description = "Cyberpunk 2077 mod manager"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
demand = "1.7.0"
keyvalues-serde = "0.2.2"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
thiserror = "2.0.12"
toml = { version = "0.9.2", features = ["serde"] }
xdg = "3.0.0"
