[package]
name = "libvapor"
version = "0.1.0"
edition = "2024"
description = "Cyberpunk 2077 mod manager backend"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
chrono-humanize = "0.2.3"
demand = "1.7.0"
inline_colorization = "0.1.6"
miette = "7.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
shellexpand = "3.1.1"
thiserror = "2.0.12"
toml = { version = "0.9.2", features = ["serde"] }
xdg = "3.0.0"
zip = "4.3.0"
